2009.12.09: David Nichols
	* initial (non-functional) implementation of object member
	  initialization at construction time; re-worked public and private
	  member declarations with types

2009.12.04: David Nichols
	* cleaned up builtin function and builtin method implementation
	  (somewhat) in preparation for hard typing support in builtin code

2009.12.03: David Nichols
	* fixed public/private member verification during 2nd stage parsing in
	  class hierarchies

2009.12.02: David Nichols
	* implemented member checking for object slices
	* moved all private methods of QoreObject into the private class
	  implementation
	* moved all private methods of QoreProgram into the private class
	  implementation

2009.12.01: David Nichols
	* implemented instantiating variables with default values when defined
	  with hard types of simple types; enforced requiring assignments for
	  variables defined as complex types
	* return nothingTypeInfo as the output type for local variable
	  declarations without any type information if not assigning to allow
	  more programming errors to be caught at parse time
	* initial support for the 'public' keyword and storing type
	  declarations for private class members
	* implemented public class members and parse-time and run-time
	  checking and enforcement
	* fixed a bug where if a program was running in one thread, other
	  threads were allowed to execute parse actions in the running program
	  that could change data structures in use by the running program,
	  which could cause a crash
	* fixed checking key encoding when making hash and object slices

2009.11.30: David Nichols
	* implemented 'invalid-operation' warning to warn when an expression
	  always returns NOTHING, for example
	* added parse-time type checking to the '.', '[]', and 'keys'
	  operators to raise the INVALID-OPERATION warning whenever it's clear
	  at parse time that the given expressions will always return NOTHING