@@ -642,6 +642,7 @@ class QoreClass {
       DLLLOCAL bool runtimeHasPublicMembersInHierarchy() const;
       // returns the type information structure for this class
       DLLLOCAL const QoreTypeInfo *getTypeInfo() const;
+      DLLLOCAL int initMembers(QoreObject *o, ExceptionSink *xsink) const;
 };
 
 #endif // _QORE_QORECLASS_H
